signature sur page d'accueil

--- a/page_accueil.html
+++ b/page_accueil.html
@@ -17,6 +17,16 @@
             <li><a href="./page_contact.html">Contact</a></li>
         </ul>
     </nav>
+
+    <div class="en-tete">
+        <div class="logo">
+            <h1 class="signature">D.SAAVEDRA.t</h1>
+            <h1 class="signature deux">D.SAAVEDRA.t</h1>
+            <h1 class="signature trois">D.SAAVEDRA.t</h1>
+            <h1 class="signature quatre">D.SAAVEDRA.t</h1>
+        </div>
+    </div>
+
 </body>
 
 </html>
