--- a/page_contact.html
+++ b/page_contact.html
@@ -17,6 +17,19 @@
             <li><a href="./page_contact.html">Contact</a></li>
         </ul>
     </nav>
+
+    <h2>Contact</h2>
+    <div>
+        <div>
+            <p>saavedratorrano@gmail.com</p>
+            <p>(438) 351-2295</p>
+            <p>Laval, QC</p>
+        </div>
+        <div>
+            <svg class="svg insta" src="./img/instagram-svgrepo-com.svg"></svg>
+            <img class="svg linkedin" src="./img//linkedin-svgrepo-com.svg">
+        </div>
+    </div>
 </body>
 
 </html>
