--- a/page_accueil.html
+++ b/page_accueil.html
@@ -10,13 +10,15 @@
 </head>
 
 <body>
-    <nav>
-        <ul class="lien">
-            <li><a href="./page_accueil.html">Accueil</a></li>
-            <li><a href="./page_propos.html">À propos</a></li>
-            <li><a href="./page_contact.html">Contact</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <ul class="lien">
+                <li><a href="./page_accueil.html">Accueil</a></li>
+                <li><a href="./page_propos.html">À propos</a></li>
+                <li><a href="./page_contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <div class="en-tete">
         <div class="logo">
