titre page à propos et insertion image dans folder img et footer

--- a/page_contact.html
+++ b/page_contact.html
@@ -27,12 +27,15 @@
                 <p>(438) 351-2295</p>
                 <p>Laval, QC</p>
             </div>
-            <div>
+            <div class="logo">
                 <img class="svg insta" src="./img/instagram-svgrepo-com.svg">
                 <img class="svg linkedin" src="./img//linkedin-svgrepo-com.svg">
             </div>
         </div>
     </div>
+    <footer>
+        <span>©2021 Dana Saavedra-Torrano</span>
+    </footer>
 </body>
 
 </html>
