--- a/page_projet.html
+++ b/page_projet.html
@@ -19,6 +19,9 @@
             </ul>
         </nav>
     </header>
+    <footer>
+        <span>©2021 Dana Saavedra-Torrano</span>
+    </footer>
 </body>
 
 </html>
