--- a/page_accueil.html
+++ b/page_accueil.html
@@ -28,7 +28,9 @@
             <h1 class="signature quatre">D.SAAVEDRA.t</h1>
         </div>
     </div>
-
+    <footer>
+        <span>©2021 Dana Saavedra-Torrano</span>
+    </footer>
 </body>
 
 </html>
