--- a/page_propos.html
+++ b/page_propos.html
@@ -19,6 +19,12 @@
             </ul>
         </nav>
     </header>
+    <div>
+        <h2>À propos</h2>
+    </div>
+    <footer>
+        <span>©2021 Dana Saavedra-Torrano</span>
+    </footer>
 </body>
 
 </html>
