--- a/page_accueil.html
+++ b/page_accueil.html
@@ -10,27 +10,35 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul class="lien">
-                <li><a href="./page_accueil.html">Accueil</a></li>
-                <li><a href="./page_propos.html">À propos</a></li>
-                <li><a href="./page_contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="page">
+        <header>
+            <nav>
+                <ul class="lien">
+                    <li><a href="./page_accueil.html">Accueil</a></li>
+                    <li><a href="./page_propos.html">À propos</a></li>
+                    <li><a href="./page_contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <div class="en-tete">
-        <div class="logo">
-            <h1 class="signature">D.SAAVEDRA.t</h1>
-            <h1 class="signature deux">D.SAAVEDRA.t</h1>
-            <h1 class="signature trois">D.SAAVEDRA.t</h1>
-            <h1 class="signature quatre">D.SAAVEDRA.t</h1>
+        <div class="en-tete">
+            <div class="ligne haut">
+
+            </div>
+            <div class="logo">
+                <h1 class="signature">D.SAAVEDRA.t</h1>
+                <h1 class="signature deux">D.SAAVEDRA.t</h1>
+                <h1 class="signature trois">D.SAAVEDRA.t</h1>
+                <h1 class="signature quatre">D.SAAVEDRA.t</h1>
+            </div>
+            <div class="ligne bas">
+            
+            </div>
         </div>
+        <footer>
+            <span>©2021 Dana Saavedra-Torrano</span>
+        </footer>
     </div>
-    <footer>
-        <span>©2021 Dana Saavedra-Torrano</span>
-    </footer>
 </body>
 
 </html>
