ajout de div page dans chaque pages

--- a/page_accueil.html
+++ b/page_accueil.html
@@ -35,6 +35,10 @@
             
             </div>
         </div>
+
+        <div>
+            <h2>Mes projets</h2>
+        </div>
         <footer>
             <span>©2021 Dana Saavedra-Torrano</span>
         </footer>
