--- a/page_contact.html
+++ b/page_contact.html
@@ -10,32 +10,34 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul class="lien">
-                <li><a href="./page_accueil.html">Accueil</a></li>
-                <li><a href="./page_propos.html">À propos</a></li>
-                <li><a href="./page_contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <div>
-        <h2>Contact</h2>
-        <div class="info">
-            <div>
-                <p>saavedratorrano@gmail.com</p>
-                <p>(438) 351-2295</p>
-                <p>Laval, QC</p>
-            </div>
-            <div class="logo">
-                <img class="svg insta" src="./img/instagram-svgrepo-com.svg">
-                <img class="svg linkedin" src="./img//linkedin-svgrepo-com.svg">
+    <div class="page">
+        <header>
+            <nav>
+                <ul class="lien">
+                    <li><a href="./page_accueil.html">Accueil</a></li>
+                    <li><a href="./page_propos.html">À propos</a></li>
+                    <li><a href="./page_contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div>
+            <h2>Contact</h2>
+            <div class="info">
+                <div>
+                    <p>saavedratorrano@gmail.com</p>
+                    <p>(438) 351-2295</p>
+                    <p>Laval, QC</p>
+                </div>
+                <div class="logo">
+                    <img class="svg insta" src="./img/instagram-svgrepo-com.svg">
+                    <img class="svg linkedin" src="./img//linkedin-svgrepo-com.svg">
+                </div>
             </div>
         </div>
+        <footer>
+            <span>©2021 Dana Saavedra-Torrano</span>
+        </footer>
     </div>
-    <footer>
-        <span>©2021 Dana Saavedra-Torrano</span>
-    </footer>
 </body>
 
 </html>
