--- a/page_projet.html
+++ b/page_projet.html
@@ -10,18 +10,20 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul class="lien">
-                <li><a href="./page_accueil.html">Accueil</a></li>
-                <li><a href="./page_propos.html">À propos</a></li>
-                <li><a href="./page_contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <footer>
-        <span>©2021 Dana Saavedra-Torrano</span>
-    </footer>
+    <div class="page">
+        <header>
+            <nav>
+                <ul class="lien">
+                    <li><a href="./page_accueil.html">Accueil</a></li>
+                    <li><a href="./page_propos.html">À propos</a></li>
+                    <li><a href="./page_contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <footer>
+            <span>©2021 Dana Saavedra-Torrano</span>
+        </footer>
+    </div>
 </body>
 
 </html>
