html page à propos et carrousel de la page d'accueil,regourper la taille des images en img dans css

--- a/page_accueil.html
+++ b/page_accueil.html
@@ -21,7 +21,7 @@
             </nav>
         </header>
 
-        <div class="en-tete">
+        <div class="section">
             <div class="ligne haut">
 
             </div>
@@ -36,8 +36,12 @@
             </div>
         </div>
 
-        <div>
+        <div class="section">
             <h2>Mes projets</h2>
+            <div class="carrousel">
+                <img class="couverture portrait" src="./img/portrait/portrait_4.jpg">
+                <img class="couverture solysse" src="./img/solysse/solysse_1.jpg">
+            </div>
         </div>
         <footer>
             <span>©2021 Dana Saavedra-Torrano</span>
