--- a/page_accueil.html
+++ b/page_accueil.html
@@ -21,11 +21,11 @@
             </nav>
         </header>
 
-        <div class="section">
+        <div class="section entete">
             <div class="ligne haut">
 
             </div>
-            <div class="logo">
+            <div class="héros">
                 <h1 class="signature">D.SAAVEDRA.t</h1>
                 <h1 class="signature deux">D.SAAVEDRA.t</h1>
                 <h1 class="signature trois">D.SAAVEDRA.t</h1>
