--- a/page_projet.html
+++ b/page_projet.html
@@ -20,6 +20,15 @@
                 </ul>
             </nav>
         </header>
+
+        <div class="section entete">
+            <div class="héros">
+                <h1 class="signature">Lorem ipsum</h1>
+                <h1 class="signature deux">Lorem ipsum</h1>
+                <p class="categorie">Lorem ipsum</p>
+            </div>
+        </div>
+
         <footer>
             <span>©2021 Dana Saavedra-Torrano</span>
         </footer>
