ajout des logo dans la page propos

--- a/page_propos.html
+++ b/page_propos.html
@@ -35,7 +35,16 @@
             <div>
                 <h2>Compétences</h2>
                 <div>
-                    <div class="icone">
+                    <div class="logo">
+                        <img class="davinci" src="./img/icon/davinci_resolve_macos_bigsur_icon_190261.png">
+                        <img class="figma" src="./img/icon/figma_macos_bigsur_icon_190183.png">
+                        <img class="vscode" src="./img/icon/file_type_vscode_icon_130084.png">
+                        <img class="maya" src="./img/icon/Icon_of_maya_2023.png">
+                        <img class="reaper" src="./img/icon/icons8-reaper-512.png">
+                        <img class="teams" src="./img/icon/microsoft_office_teams_logo_icon_145726.png">
+                        <img class="teams" src="./img/icon/microsoft_office_teams_logo_icon_145726.png">
+                        <img class="unity" src="./img/icon/unity_editor_macos_bigsur_icon_189588.png">
+                        <img class="wordpress" src="./img/icon/wordpress_logo_icon_167953.png">
                     </div>
                     <div>
                         <ul>
