--- a/page_propos.html
+++ b/page_propos.html
@@ -21,16 +21,23 @@
             </nav>
         </header>
         <div>
-            <div >
+            <div>
                 <h2>À propos</h2>
                 <div class="info propos">
-                    <p class="propos">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p class="propos">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+                        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <img src="./img/portrait/portrait_4.jpg">
                 </div>
             </div>
             <div>
                 <h2>Objectif de carrière</h2>
-                <p>Passionné par l’audiovisuel et la création numérique, je souhaite participer à la création de contenus innovants dans les domaines de la communication, du jeu vidéo et du cinéma, afin de mettre à profit mes compétences en montage vidéo , animation et modélisation 3D ainsi qu’en design graphique.</p>
+                <p>Passionné par l’audiovisuel et la création numérique, je souhaite participer à la création de
+                    contenus innovants dans les domaines de la communication, du jeu vidéo et du cinéma, afin de mettre
+                    à profit mes compétences en montage vidéo , animation et modélisation 3D ainsi qu’en design
+                    graphique.</p>
             </div>
             <div>
                 <h2>Compétences</h2>
@@ -47,20 +54,20 @@
                         <img class="wordpress" src="./img/icon/wordpress_logo_icon_167953.png">
                     </div>
                     <div>
-                        <ul>
-                            <li><p>C++</p></li>
-                            <li><p>HTML</p></li>
-                            <li><p>CSS</p></li>
-                            <li><p>Javscript</p></li>
-                        </ul>
+                        <div class="logo">
+                            <img class="html" src="./img/icon/file_type_html_icon_130541.png">
+                            <img class="css" src="./img/icon/file_type_css_icon_130661.png">
+                            <img class="javascript" src="./img/icon/javascript_icon_130900.png">
+                            <img class="c++" src="./img/icon/plus_logo_c_icon_214621.png">
+                            <img class="c#" src="./img/icon/csharp_original_logo_icon_146578.png">
+                        </div>
                     </div>
                 </div>
             </div>
+            <footer>
+                <span>©2021 Dana Saavedra-Torrano</span>
+            </footer>
         </div>
-        <footer>
-            <span>©2021 Dana Saavedra-Torrano</span>
-        </footer>
-    </div>
 </body>
 
 </html>
