placer les icon des comp/rences

--- a/page_contact.html
+++ b/page_contact.html
@@ -28,7 +28,7 @@
                     <p>(438) 351-2295</p>
                     <p>Laval, QC</p>
                 </div>
-                <div class="logo">
+                <div>
                     <img class="svg insta" src="./img/icon/instagram-svgrepo-com.svg">
                     <img class="svg linkedin" src="./img/icon/linkedin-svgrepo-com.svg">
                 </div>
