--- a/page_propos.html
+++ b/page_propos.html
@@ -42,24 +42,23 @@
             <div>
                 <h2>Compétences</h2>
                 <div>
-                    <div class="logo">
-                        <img class="davinci" src="./img/icon/davinci_resolve_macos_bigsur_icon_190261.png">
-                        <img class="figma" src="./img/icon/figma_macos_bigsur_icon_190183.png">
-                        <img class="vscode" src="./img/icon/file_type_vscode_icon_130084.png">
-                        <img class="maya" src="./img/icon/Icon_of_maya_2023.png">
-                        <img class="reaper" src="./img/icon/icons8-reaper-512.png">
-                        <img class="teams" src="./img/icon/microsoft_office_teams_logo_icon_145726.png">
-                        <img class="teams" src="./img/icon/microsoft_office_teams_logo_icon_145726.png">
-                        <img class="unity" src="./img/icon/unity_editor_macos_bigsur_icon_189588.png">
-                        <img class="wordpress" src="./img/icon/wordpress_logo_icon_167953.png">
-                    </div>
-                    <div>
-                        <div class="logo">
-                            <img class="html" src="./img/icon/file_type_html_icon_130541.png">
-                            <img class="css" src="./img/icon/file_type_css_icon_130661.png">
-                            <img class="javascript" src="./img/icon/javascript_icon_130900.png">
-                            <img class="c++" src="./img/icon/plus_logo_c_icon_214621.png">
-                            <img class="c#" src="./img/icon/csharp_original_logo_icon_146578.png">
+                    <div class="competences">
+                        <div class="logo logiciel">
+                            <img class="icon davinci" src="./img/icon/davinci_resolve_macos_bigsur_icon_190261.png">
+                            <img class="icon figma" src="./img/icon/figma_macos_bigsur_icon_190183.png">
+                            <img class="icon vscode" src="./img/icon/file_type_vscode_icon_130084.png">
+                            <img class="icon maya" src="./img/icon/Icon_of_maya_2023.png">
+                            <img class="icon reaper" src="./img/icon/icons8-reaper-512.png">
+                            <img class="icon teams" src="./img/icon/microsoft_office_teams_logo_icon_145726.png">
+                            <img class="icon unity" src="./img/icon/unity_editor_macos_bigsur_icon_189588.png">
+                            <img class="icon wordpress" src="./img/icon/wordpress_logo_icon_167953.png">
+                        </div>
+                        <div class="logo language">
+                            <img class="icon html" src="./img/icon/file_type_html_icon_130541.png">
+                            <img class="icon css" src="./img/icon/file_type_css_icon_130661.png">
+                            <img class="icon javascript" src="./img/icon/javascript_icon_130900.png">
+                            <img class="icon c++" src="./img/icon/icons8-c++-512.png">
+                            <img class="icon c#" src="./img/icon/csharp_original_logo_icon_146578.png">
                         </div>
                     </div>
                 </div>
