changement des noms de la class logo

--- a/page_propos.html
+++ b/page_propos.html
@@ -43,7 +43,7 @@
                 <h2>Compétences</h2>
                 <div>
                     <div class="competences">
-                        <div class="logo logiciel">
+                        <div class="logo ">
                             <img class="icon davinci" src="./img/icon/davinci_resolve_macos_bigsur_icon_190261.png">
                             <img class="icon figma" src="./img/icon/figma_macos_bigsur_icon_190183.png">
                             <img class="icon vscode" src="./img/icon/file_type_vscode_icon_130084.png">
@@ -53,7 +53,7 @@
                             <img class="icon unity" src="./img/icon/unity_editor_macos_bigsur_icon_189588.png">
                             <img class="icon wordpress" src="./img/icon/wordpress_logo_icon_167953.png">
                         </div>
-                        <div class="logo language">
+                        <div class="logo ">
                             <img class="icon html" src="./img/icon/file_type_html_icon_130541.png">
                             <img class="icon css" src="./img/icon/file_type_css_icon_130661.png">
                             <img class="icon javascript" src="./img/icon/javascript_icon_130900.png">
