correction footer  et placer les classes section, placement du hero dans la page projet,

--- a/page_accueil.html
+++ b/page_accueil.html
@@ -25,14 +25,14 @@
             <div class="ligne haut">
 
             </div>
-            <div class="héros">
+            <div class="heros">
                 <h1 class="signature">D.SAAVEDRA.t</h1>
                 <h1 class="signature deux">D.SAAVEDRA.t</h1>
                 <h1 class="signature trois">D.SAAVEDRA.t</h1>
                 <h1 class="signature quatre">D.SAAVEDRA.t</h1>
             </div>
             <div class="ligne bas">
-            
+
             </div>
         </div>
 
