--- a/page_projet.html
+++ b/page_projet.html
@@ -22,7 +22,7 @@
         </header>
 
         <div class="section entete">
-            <div class="héros">
+            <div class="heros">
                 <h1 class="signature">Lorem ipsum</h1>
                 <h1 class="signature deux">Lorem ipsum</h1>
                 <p class="categorie">Lorem ipsum</p>
