--- a/page_propos.html
+++ b/page_propos.html
@@ -32,14 +32,14 @@
                     <img src="./img/portrait/portrait_4.jpg">
                 </div>
             </div>
-            <div>
+            <div class="section">
                 <h2>Objectif de carrière</h2>
                 <p>Passionné par l’audiovisuel et la création numérique, je souhaite participer à la création de
                     contenus innovants dans les domaines de la communication, du jeu vidéo et du cinéma, afin de mettre
                     à profit mes compétences en montage vidéo , animation et modélisation 3D ainsi qu’en design
                     graphique.</p>
             </div>
-            <div>
+            <div class="section">
                 <h2>Compétences</h2>
                 <div>
                     <div class="competences">
