installer les images couverture et ajout dans page d'accueil, fini organisation page projet

--- a/page_accueil.html
+++ b/page_accueil.html
@@ -23,7 +23,6 @@
 
         <div class="section entete">
             <div class="ligne haut">
-
             </div>
             <div class="heros">
                 <h1 class="signature">D.SAAVEDRA.t</h1>
@@ -32,15 +31,16 @@
                 <h1 class="signature quatre">D.SAAVEDRA.t</h1>
             </div>
             <div class="ligne bas">
-
             </div>
         </div>
 
-        <div class="section">
+        <div class="section projet">
             <h2>Mes projets</h2>
             <div class="carrousel">
-                <img class="couverture portrait" src="./img/portrait/portrait_4.jpg">
-                <img class="couverture solysse" src="./img/solysse/solysse_1.jpg">
+                <img class="couverture portrait" src="./img/couverture/couverture_portrait.jpg">
+                <img class="couverture solysse" src="./img/couverture/couverture_solysse.jpg">
+                <img class="couverture paysage" src="./img/couverture/couverture_paysage.jpg">
+                <img class="couverture paranoia" src="./img/couverture/couverture_paranoia_douce.jpg">
             </div>
         </div>
         <footer>
