--- a/page_projet.html
+++ b/page_projet.html
@@ -28,6 +28,16 @@
                 <p class="categorie">Lorem ipsum</p>
             </div>
         </div>
+        <div class="section">
+            <p class="description"></p>
+        </div>
+
+        <div class="section equipe">
+        </div>
+
+        <div class="section logiciel">
+            <h2>Logiciel utilisé</h2>
+        </div>
 
         <footer>
             <span>©2021 Dana Saavedra-Torrano</span>
