division des élèments du carrousel et effect

--- a/page_accueil.html
+++ b/page_accueil.html
@@ -7,6 +7,7 @@
     <title>Page d'accueil </title>
     <link rel="stylesheet" href="style.css">
     <script defer src="./script.js"></script>
+    <script defer src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 
 <body>
@@ -37,10 +38,16 @@
         <div class="section projet">
             <h2>Mes projets</h2>
             <div class="carrousel">
+                <div></div>
                 <img class="couverture portrait" src="./img/couverture/couverture_portrait.jpg">
+                <button><a href="page_projet.html?proj-id=1"></a></button>
+            </div>
                 <img class="couverture solysse" src="./img/couverture/couverture_solysse.jpg">
+                <button><a href="page_projet.html?proj-id=2"></a></button>
                 <img class="couverture paysage" src="./img/couverture/couverture_paysage.jpg">
+                <button><a href="page_projet.html?proj-id=3"></a></button>
                 <img class="couverture paranoia" src="./img/couverture/couverture_paranoia_douce.jpg">
+                <button><a href="page_projet.html?proj-id=4"></a></button>
             </div>
         </div>
         <footer>
