placement du header

--- a/page_accueil.html
+++ b/page_accueil.html
@@ -12,7 +12,6 @@
 
 <body>
     <div class="page">
-        <header>
             <nav>
                 <ul class="lien">
                     <li><a href="./page_accueil.html">Accueil</a></li>
@@ -20,9 +19,8 @@
                     <li><a href="./page_contact.html">Contact</a></li>
                 </ul>
             </nav>
-        </header>
 
-        <div class="section entete">
+        <header class="section">
             <div class="ligne haut">
             </div>
             <div class="heros">
@@ -33,21 +31,27 @@
             </div>
             <div class="ligne bas">
             </div>
-        </div>
+        </header>
 
         <div class="section projet">
             <h2>Mes projets</h2>
             <div class="carrousel">
-                <div></div>
-                <img class="couverture portrait" src="./img/couverture/couverture_portrait.jpg">
-                <button><a href="page_projet.html?proj-id=1"></a></button>
-            </div>
-                <img class="couverture solysse" src="./img/couverture/couverture_solysse.jpg">
-                <button><a href="page_projet.html?proj-id=2"></a></button>
-                <img class="couverture paysage" src="./img/couverture/couverture_paysage.jpg">
-                <button><a href="page_projet.html?proj-id=3"></a></button>
-                <img class="couverture paranoia" src="./img/couverture/couverture_paranoia_douce.jpg">
-                <button><a href="page_projet.html?proj-id=4"></a></button>
+                <div>
+                    <img class="couverture portrait" src="./img/couverture/couverture_portrait.jpg">
+                    <button><a href="page_projet.html?proj-id=1"></a></button>
+                </div>
+                <div>
+                    <img class="couverture solysse" src="./img/couverture/couverture_solysse.jpg">
+                    <button><a href="page_projet.html?proj-id=2"></a></button>
+                </div>
+                <div>
+                    <img class="couverture paysage" src="./img/couverture/couverture_paysage.jpg">
+                    <button><a href="page_projet.html?proj-id=3"></a></button>
+                </div>
+                <div>
+                    <img class="couverture paranoia" src="./img/couverture/couverture_paranoia_douce.jpg">
+                    <button><a href="page_projet.html?proj-id=4"></a></button>
+                </div>
             </div>
         </div>
         <footer>
