--- a/page_accueil.html
+++ b/page_accueil.html
@@ -36,20 +36,16 @@
         <div class="section projet">
             <h2>Mes projets</h2>
             <div class="carrousel">
-                <div>
-                    <img class="couverture portrait" src="./img/couverture/couverture_portrait.jpg">
+                <div class="couverture">
                     <button><a href="page_projet.html?proj-id=1"></a></button>
                 </div>
-                <div>
-                    <img class="couverture solysse" src="./img/couverture/couverture_solysse.jpg">
+                <div class="couverture">
                     <button><a href="page_projet.html?proj-id=2"></a></button>
                 </div>
-                <div>
-                    <img class="couverture paysage" src="./img/couverture/couverture_paysage.jpg">
+                <div class="couverture">
                     <button><a href="page_projet.html?proj-id=3"></a></button>
                 </div>
-                <div>
-                    <img class="couverture paranoia" src="./img/couverture/couverture_paranoia_douce.jpg">
+                <div class="couverture">
                     <button><a href="page_projet.html?proj-id=4"></a></button>
                 </div>
             </div>
