animation gsap signature, correction carroussel

--- a/page_accueil.html
+++ b/page_accueil.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page d'accueil </title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
     <script defer src="./script.js"></script>
     <script defer src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 
 <body>
     <div class="page">
-            <nav>
-                <ul class="lien">
-                    <li><a href="./page_accueil.html">Accueil</a></li>
-                    <li><a href="./page_propos.html">À propos</a></li>
-                    <li><a href="./page_contact.html">Contact</a></li>
-                </ul>
-            </nav>
+        <nav>
+            <ul class="lien">
+                <li><a href="./page_accueil.html">Accueil</a></li>
+                <li><a href="./page_propos.html">À propos</a></li>
+                <li><a href="./page_contact.html">Contact</a></li>
+            </ul>
+        </nav>
 
         <header class="section">
             <div class="ligne haut">
