--- a/page_propos.html
+++ b/page_propos.html
@@ -27,7 +27,7 @@
                         ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
                         in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
                         cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <img src="./img/portrait/portrait_4.jpg">
+                    <img class="profil" src="./img/dana_saavedra-torrano.jpg">
                 </div>
             </div>
             <div class="section">
