animation gsap au scroll

--- a/page_propos.html
+++ b/page_propos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page à propos</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
     <script defer src="./script.js"></script>
 </head>
 
@@ -19,7 +20,7 @@
             </ul>
         </nav>
         <div>
-            <div>
+            <div class="propos">
                 <h2>À propos</h2>
                 <div class="info propos">
                     <p class="propos">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
