--- a/page_accueil.html
+++ b/page_accueil.html
@@ -7,6 +7,7 @@
     <title>Page d'accueil </title>
     <link rel="stylesheet" href="style.css">
     <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
     <script defer src="./script.js"></script>
     <script defer src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
