--- a/page_projet.html
+++ b/page_projet.html
@@ -9,7 +9,7 @@
     <script defer src="./script.js"></script>
 </head>
 
-<body>
+<body id="page-projet">
     <div class="page">
         <header>
             <nav>
