--- a/page_accueil.html
+++ b/page_accueil.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
-    <script defer src="./script.js"></script>
     <script defer src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script defer src="./script.js"></script>
 </head>
 
 <body>
@@ -39,16 +39,16 @@
             <h2>Mes projets</h2>
             <div class="carrousel">
                 <div class="couverture">
-                    <button><a href="page_projet.html?proj-id=1"></a></button>
+                    <a href="page_projet.html?proj-id=1"><img src="./img/couverture//couverture_paysage.jpg" alt=""></a>
                 </div>
                 <div class="couverture">
-                    <button><a href="page_projet.html?proj-id=2"></a></button>
+                    <a href="page_projet.html?proj-id=2"><img src="./img/couverture/couverture_solysse.jpg" alt=""></a>
                 </div>
                 <div class="couverture">
-                    <button><a href="page_projet.html?proj-id=3"></a></button>
+                    <a href="page_projet.html?proj-id=3"><img src="./img/couverture/couverture_paranoia_douce.jpg" alt=""></a>
                 </div>
                 <div class="couverture">
-                    <button><a href="page_projet.html?proj-id=4"></a></button>
+                    <a href="page_projet.html?proj-id=4"><img src="./img/couverture/couverture_portrait.jpg" alt=""></a>
                 </div>
             </div>
         </div>
