--- a/page_accueil.html
+++ b/page_accueil.html
@@ -38,17 +38,12 @@
         <div class="section projet">
             <h2>Mes projets</h2>
             <div class="carrousel">
-                <div class="couverture">
-                    <a href="page_projet.html?proj-id=1"><img src="./img/couverture//couverture_paysage.jpg" alt=""></a>
-                </div>
-                <div class="couverture">
-                    <a href="page_projet.html?proj-id=2"><img src="./img/couverture/couverture_solysse.jpg" alt=""></a>
-                </div>
-                <div class="couverture">
-                    <a href="page_projet.html?proj-id=3"><img src="./img/couverture/couverture_paranoia_douce.jpg" alt=""></a>
-                </div>
-                <div class="couverture">
-                    <a href="page_projet.html?proj-id=4"><img src="./img/couverture/couverture_portrait.jpg" alt=""></a>
+                <div v-for="project in projects" :key="project.id" class="couverture">
+                    <img :src="project.couverture" alt="project.resume">
+                    <a :href="`page_projet.html?proj-id=${project.id}`"><div class="text">
+                        <h3>{{ project.title }}</h3>
+                        <p>{{ project.resume }}</p>
+                    </div></a>
                 </div>
             </div>
         </div>
