--- a/page_propos.html
+++ b/page_propos.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <footer>
-                <span>©2021 Dana Saavedra-Torrano</span>
+                <span>©<span id="current-year"></span> Dana Saavedra-Torrano</span>
             </footer>
         </div>
 </body>
