--- a/page_propos.html
+++ b/page_propos.html
@@ -14,7 +14,7 @@
     <div class="page">
         <nav>
             <ul class="lien">
-                <li><a href="./page_accueil.html">Accueil</a></li>
+                <li><a href="./index.html">Accueil</a></li>
                 <li><a href="./page_propos.html">À propos</a></li>
                 <li><a href="./page_contact.html">Contact</a></li>
             </ul>
