--- a/page_contact.html
+++ b/page_contact.html
@@ -27,7 +27,9 @@
                     <p>Laval, QC</p>
                 </div>
                 <div>
+                    <a href="https://www.instagram.com/d_saavedra_t/">
                     <img class="svg insta" src="./img/icon/instagram-svgrepo-com.svg">
+                    </a>
                     <img class="svg linkedin" src="./img/icon/linkedin-svgrepo-com.svg">
                 </div>
             </div>
