--- a/page_propos.html
+++ b/page_propos.html
@@ -23,11 +23,7 @@
             <div class="propos">
                 <h2>À propos</h2>
                 <div class="info propos">
-                    <p class="propos">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-                        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p class="propos">Bonjour, je m'appelle Dana. Je suis finissante dans la Techniques d'intégration multimédia au Collège Montmorency. Je suis passionnée par les arts et je suis polyvalente et curieuse, toujours prête à explorer de nouveaux médiums. J’aime créer des projets originaux en 3D, animation ou multimédia interactif, en combinant sensibilité artistique et innovation technique.</p>
                     <img class="profil" src="./img/dana_saavedra-torrano.jpg">
                 </div>
             </div>
