--- a/page_contact.html
+++ b/page_contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page de contact</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="./script.js"></script>
+    <script defer src="./year.js"></script>
 </head>
 
 <body>
@@ -27,15 +27,16 @@
                     <p>Laval, QC</p>
                 </div>
                 <div>
+                    <!-- Ceci permet de mettre un lien à mon image-->
                     <a href="https://www.instagram.com/d_saavedra_t/">
-                    <img class="svg insta" src="./img/icon/instagram-svgrepo-com.svg">
+                        <img class="svg insta" src="./img/icon/instagram-svgrepo-com.svg">
                     </a>
                     <img class="svg linkedin" src="./img/icon/linkedin-svgrepo-com.svg">
                 </div>
             </div>
         </div>
         <footer>
-            <span>©<span id="current-year"></span> Dana Saavedra-Torrano</span>
+            <span>© <span id="current-year"></span> Dana Saavedra-Torrano</span>
         </footer>
     </div>
 </body>
