--- a/page_propos.html
+++ b/page_propos.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page à propos</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
-    <script defer src="./script.js"></script>
+    <script defer src="./year.js"></script>
 </head>
 
 <body>
@@ -23,7 +22,11 @@
             <div class="propos">
                 <h2>À propos</h2>
                 <div class="info propos">
-                    <p class="propos">Bonjour, je m'appelle Dana. Je suis finissante dans la Techniques d'intégration multimédia au Collège Montmorency. Je suis passionnée par les arts et je suis polyvalente et curieuse, toujours prête à explorer de nouveaux médiums. J’aime créer des projets originaux en 3D, animation ou multimédia interactif, en combinant sensibilité artistique et innovation technique.</p>
+                    <p class="propos">Bonjour, je m'appelle Dana. Je suis finissante dans la Techniques d'intégration
+                        multimédia au Collège Montmorency. Je suis passionnée par les arts et je suis polyvalente et
+                        curieuse, toujours prête à explorer de nouveaux médiums. J’aime créer des projets originaux en
+                        3D, animation ou multimédia interactif, en combinant sensibilité artistique et innovation
+                        technique.</p>
                     <img class="profil" src="./img/dana_saavedra-torrano.jpg">
                 </div>
             </div>
@@ -59,7 +62,7 @@
                 </div>
             </div>
             <footer>
-                <span>©<span id="current-year"></span> Dana Saavedra-Torrano</span>
+                <span>© <span id="current-year"></span> Dana Saavedra-Torrano</span>
             </footer>
         </div>
 </body>
