--- a/page_contact.html
+++ b/page_contact.html
@@ -22,7 +22,7 @@
             <h2>Contact</h2>
             <div class="info">
                 <div>
-                    <p>saavedratorrano@gmail.com</p>
+                    <p><a href="mailto:saavedratorranod@gmail.com">saavedratorrano@gmail.com</a></p>
                     <p>(438) 351-2295</p>
                     <p>Laval, QC</p>
                 </div>
@@ -31,7 +31,9 @@
                     <a href="https://www.instagram.com/d_saavedra_t/">
                         <img class="svg insta" src="./img/icon/instagram-svgrepo-com.svg">
                     </a>
-                    <img class="svg linkedin" src="./img/icon/linkedin-svgrepo-com.svg">
+                    <a href="https://www.linkedin.com/in/dana-saavedra-torrano/">
+                        <img class="svg linkedin" src="./img/icon/linkedin-svgrepo-com.svg">
+                    </a>
                 </div>
             </div>
         </div>
