--- a/page_propos.html
+++ b/page_propos.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="page">
+    <div class="page propos">
         <nav>
             <ul class="lien">
                 <li><a href="./index.html">Accueil</a></li>
