changement de photo, correction signature, enlever hover des images

--- a/page_propos.html
+++ b/page_propos.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="page">
+    <div class="page propos">
         <nav>
             <ul class="lien">
                 <li><a href="./index.html">Accueil</a></li>
@@ -27,7 +27,7 @@
                         curieuse, toujours prête à explorer de nouveaux médiums. J’aime créer des projets originaux en
                         3D, animation ou multimédia interactif, en combinant sensibilité artistique et innovation
                         technique.</p>
-                    <img class="profil" src="./img/dana_saavedra-torrano.jpg">
+                    <img class="profil" src="./img/dana_saavedra-torrano.JPG">
                 </div>
             </div>
             <div class="section">
