--- a/page_propos.html
+++ b/page_propos.html
@@ -27,7 +27,7 @@
                         curieuse, toujours prête à explorer de nouveaux médiums. J’aime créer des projets originaux en
                         3D, animation ou multimédia interactif, en combinant sensibilité artistique et innovation
                         technique.</p>
-                    <img class="profil" src="./img/dana_saavedra-torrano.JPG">
+                    <img class="profil" src="./img/dana_saavedra-torrano.jpg">
                 </div>
             </div>
             <div class="section">
